style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Roboto:wght@400;500;700&display=swap');


.container {
    height: 100vh;
    width: 100%;
    background-color: rgb(255, 255, 177);
    display: flex;
    justify-content: center;
    align-items: center;
}

.container-fluid {
    margin: 0px !important;
    padding: 0px !important;
}
.gradientNav
{
    background-image: linear-gradient(45deg, rgb(3, 3, 3) 55%, rgb(255, 0, 0) 30%,rgb(224, 5, 5) 50%,rgb(239, 0, 0) 70%, rgb(0, 0, 0) 100%) !important"
}
.navbar-brand {
    font-weight: 1000;
    font-family: 'Croissant One', sans-serif;
    font-size: 35px;
    color: gold;
}

.nav-link {
    font-weight: 900;
    transition: 0.5s;
}

.nav-link:hover {
    color: white
}

.dropdown-menu {
    z-index: 9 !important;
    background-image: linear-gradient(45deg, rgb(3, 3, 3) 65%, rgb(255, 0, 0) 30%,
            rgb(224, 5, 5) 50%, rgb(239, 0, 0) 70%, rgb(0, 0, 0) 100%);

}

.dropdown-item {
    color: rgba(0, 26, 255, 0.836) !important;
    transition: 0.3s;
    font-weight: 900;

}

.dropdown-item:hover {
    background-color: rgb(0, 0, 0);
    font-weight: 900;
    color: white !important;
}

.basic-info {
    display: flex;
    align-items: center;
    height: 50vh;
    background-image: url(./assets/img/Slider1.jpg);
    font-weight: 1000;
    font-family: 'Croissant One', sans-serif;
}
/* nav button */
.fa-bars
{
    font-size: 30px;
}
.stat-bars
{
    overflow: hidden;
}
.call
{
    height: 10px;
    width: 1%;
    float: left;
    background-color: rgb(253, 0, 0);
    overflow: hidden;
}

@media only screen and (max-width: 665px) {
    .basic-info {
        background-position: 1100px 500px;
    }
    .basic-info h1{
        font-size: 29px;
        text-shadow: 1px 1px 10px black;
    }
    #navbarSupportedContent
    {
        position: absolute !important;
        top: 0px;
    }
    .sideNavComes
    {
        z-index: 9999;
        height: auto;
        width: 100%;
        background-color: black;
    }
}

